@@ -54,6 +54,7 @@ Unreleased Version 2.2.0-pre
  * Feature: Crop flipbook when a selection is present upon opening it.
  * Feature: Make the flipbook UI clearer. The buttons now look like buttons, the uncrop button has a better icon and only shows while the view is cropped and the speed slider shows how many FPS you're actually running at.
  * Fix: Allow saving and loading files in weird Android folders that chew up the file names internally.
+ * Server Feature: Allow servers to have a rules text that users are prompted to accept upon connecting. Clients remember that they accepted the rules and won't prompt again unless they changed since last time.
 
 2023-09-30 Version 2.2.0-beta.8
  * Fix: Apply color wheel direction to color dialogs too. Thanks Blozzom for reporting.
